# autopilot

./: .gitignore  CMakeLists.txt  README.md
cmake/: download_model.cmake
include/: application.hpp  orchestrator.hpp  state_provider.hpp  state_request.hpp  window_state_provider.hpp
src/: application.cpp  main.cpp  orchestrator.cpp  state_request.cpp  window_state_provider.cpp
